--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -30,17 +30,17 @@ jobs:
           cmake -DCMAKE_BUILD_TYPE=Release ..
           cmake --build . --target install
           chmod +x ./telegram-bot-api/build/telegram-bot-api
-          ./telegram-bot-api/build/telegram-bot-api --version > ./telegram-bot-api/build/version_output.txt 2>&1
-          sed -i 's/^.* /v/' ./telegram-bot-api/build/version_output.txt
+          /home/runner/work/telegram-bot-api-builds/telegram-bot-api-builds/telegram-bot-api/build/telegram-bot-api --version > /home/runner/work/telegram-bot-api-builds/telegram-bot-api-builds/telegram-bot-api/build/version_output.txt 2>&1
+          sed -i 's/^.* /v/' /home/runner/work/telegram-bot-api-builds/telegram-bot-api-builds/telegram-bot-api/build/version_output.txt
 
       - name: получение версии
         run: |
-          echo "VERSION=$(cat ./telegram-bot-api/build/version_output.txt)" >> $GITHUB_ENV
+          echo "VERSION=$(cat /home/runner/work/telegram-bot-api-builds/telegram-bot-api-builds/telegram-bot-api/build/version_output.txt)" >> $GITHUB_ENV
 
       - name: проверка требуется ли релиз
         id: check_release
         run: |
-          VERSION=$(cat ./telegram-bot-api/build/version_output.txt)
+          VERSION=$(cat /home/runner/work/telegram-bot-api-builds/telegram-bot-api-builds/telegram-bot-api/build/version_output.txt)
           echo "VERSION=$VERSION" >> $GITHUB_ENV
           TAG_EXISTS=$(git tag -l "$VERSION")
           if [ -z "$TAG_EXISTS" ]; then
@@ -61,5 +61,5 @@ jobs:
         run: |
           set +e
           RELEASE_ID=$(curl -sH "Authorization: token ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/${{ github.repository }}/releases/tags/$VERSION | jq -r .id)
-          UPLOAD_URL="https://uploads.github.com/repos/${{ github.repository }}/releases/$RELEASE_ID/assets?name=$(basename ./telegram-bot-api/build/telegram-bot-api)"
-          curl -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" -H "Content-Type: application/octet-stream" --data-binary @"./telegram-bot-api/build/telegram-bot-api" "$UPLOAD_URL"
+          UPLOAD_URL="https://uploads.github.com/repos/${{ github.repository }}/releases/$RELEASE_ID/assets?name=$(basename /home/runner/work/telegram-bot-api-builds/telegram-bot-api-builds/telegram-bot-api/build/telegram-bot-api)"
+          curl -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" -H "Content-Type: application/octet-stream" --data-binary @"/home/runner/work/telegram-bot-api-builds/telegram-bot-api-builds/telegram-bot-api/build/telegram-bot-api" "$UPLOAD_URL"
