--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -29,7 +29,7 @@ jobs:
           ZLIB_DIR=$(tar -tf zlib.tar.gz | head -1 | cut -f1 -d"/")
           echo "загружена директория zlib: $ZLIB_DIR"
           cd $ZLIB_DIR
-          ./configure --static --disable-shared --pkg-config-flags="--static"
+          ./configure --static --pkg-config-flags="--static"
           make
           sudo make install
           cd ..
